[gd_scene load_steps=2 format=3 uid="uid://b0kqxmbf3gt0j"]

[ext_resource type="Script" uid="uid://ck4twphfanp60" path="res://ProgrammingGameAIByExample/Graphs/graph_testing.gd" id="1_spwar"]

[node name="GraphTesting" type="Node2D"]
script = ExtResource("1_spwar")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(600, 500)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="Button" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "ADD NODE"

[node name="GraphTree" type="Tree" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NodeManipulation" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/HBoxContainer/NodeManipulation"]
layout_mode = 2
text = "No Node Selected"

[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="Control/HBoxContainer/VBoxContainer/GraphTree" to="." method="_on_graph_tree_item_selected"]
